<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_explore"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_bookmarks"
        android:enabled="true"
        android:icon="@drawable/ic_bookmark_check"
        android:title="@string/saved"
        app:showAsAction="ifRoom" />
</menu>