...
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="All"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="10sp" />
...
